--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -3,7 +3,7 @@
 
 <head>
     {% include 'recipes/partials/head.html' %}
-    <title>{% block title %}{% endblock title %}</title>  
+    <title>{% block title %}{% endblock title %}Recipe</title>  
 </head>
 
 <body>
